--- a/core/components/static/stylesheets/elements-components.css
+++ b/core/components/static/stylesheets/elements-components.css
@@ -256,6 +256,8 @@ details.great-accordion[open] summary:before {
     display: block;
     content: '';
     clear: both; }
+  .great-header-search-container.signed-in {
+    margin-right: 130px; }
 
 @media (max-width: 768px) {
   .great-header .great-header-search-wrapper form {
@@ -669,8 +671,7 @@ body.js-enabled .great-header-country-select {
     -ms-flex-positive: 1;
     flex-grow: 1;
     -ms-flex-item-align: end;
-    align-self: flex-end;
-    margin-right: 120px; }
+    align-self: flex-end; }
     @media (max-width: 768px) {
       .great-header .main-nav-container.desktop,
       .great-sub-header .main-nav-container.desktop {
@@ -983,8 +984,7 @@ body.js-enabled .great-header-country-select {
     -ms-flex-positive: 1;
     flex-grow: 1;
     -ms-flex-item-align: end;
-    align-self: flex-end;
-    margin-right: 120px; }
+    align-self: flex-end; }
     @media (max-width: 768px) {
       .great-header .main-nav-container.desktop,
       .great-sub-header .main-nav-container.desktop {
